# ArtomatixImageLoader

./: .gitattributes  .gitignore  .travis.yml  AIL.cpp  AIL.h  CMakeLists.txt  ImageLoaderBase.h  exr.cpp  exr.h  jenkins.sh  jpeg.cpp  paket.dependencies  png.cpp  png.h  python.c  readme.md  setup.py
.paket/: get_paket.bat  get_paket.sh
LocalNugetPackages/: NativeCodeBuilder.0.3.2.nupkg
bindings/csharp/ArtomatixImageLoader/: .gitignore  ArtomatixImageLoader.sln  Package.nuspec  paket.references
bindings/csharp/ArtomatixImageLoader/ArtomatixImageLoader/: AImg.cs  Artomatix.ImageLoader.csproj  ArtomatixImageLoader.csproj  Enums.cs  Exceptions.cs  ImgEncodingOptions.cs  ImgLoader.cs  MemoryTrackerProxy.cs  NativeFuncs.cs  native_code_setting.txt  packages.config
bindings/csharp/ArtomatixImageLoader/ArtomatixImageLoader/Properties/: AssemblyInfo.cs
bindings/csharp/ArtomatixImageLoader/ArtomatixImageLoader/embedded_files/: .gitignore
bindings/csharp/ArtomatixImageLoader/ArtomatixImageLoaderTests/: ArtomatixImageLoaderTests.csproj  TestAImg.cs
bindings/csharp/ArtomatixImageLoader/ArtomatixImageLoaderTests/Properties/: AssemblyInfo.cs
bindings/csharp/ArtomatixImageLoader/scripts/: linux_pre_build.sh  windows_pre_build.bat
bindings/python/: AImg.py  enums.py  requirements.txt  setup.py  tests.py
bindings/python/AImg/: AImg.py  AImgExceptions.py  EncodingOptions.py  __init__.py  enums.py
cmake/: FindOpenEXR.cmake
src_c/: AIL.cpp  AIL.h  AIL_internal.h  CMakeLists.txt  IExifHandler.hpp  ImageLoaderBase.h  JpegExifHandler.cpp  JpegExifHandler.hpp  exr.cpp  exr.h  hdr.cpp  hdr.h  jpeg.cpp  jpeg.h  png.cpp  png.h  python.c  tga.cpp  tga.h  tiff.cpp  tiff.h  valgrind_suppressions.txt
src_c/cmake/: FindNumPy.cmake  FindOpenEXR.cmake
src_c/cmake/Hunter/: config.cmake
src_c/tests/: CMakeLists.txt  exr.cpp  hdr.cpp  jpeg.cpp  png.cpp  testCommon.cpp  testCommon.h  tga.cpp  tiff.cpp
test_images/exr/: grad_32.exr  neal_half.exr
test_images/hdr/: test-env.hdr
test_images/tga/: 4channel.tga  indexed.tga  test.tga
test_images/tiff/: 16_bit_float.tif  16_bit_float_separate_chans.tif  16_bit_int.tif  16_bit_int_separate_chans.tif  24_bit_float.tif  24_bit_float_separate_chans.tif  32_bit_float.tif  32_bit_float_separate_chans.tif  8_bit_int.tif  8_bit_int_separate_chans.tif  ICC.tif  jpeg_compressed.tif
tests/: CMakeLists.txt  exr.cpp  testCommon.h
